--- a/Front/Super-Mas/html/productos.html
+++ b/Front/Super-Mas/html/productos.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos | Super-Mas</title>
-    <link rel="stylesheet" href="../css/navbar.css">
-    <link rel="stylesheet" href="../css/footer.css">
-    <link rel="stylesheet" href="../css/index.css">
-    <link rel="icon" type="image/x-icon" href="../assets/icons/super-mas.ico">
+    <link rel="stylesheet" href="../css/listados.css">
+    <link rel="shortcut icon" href="../assets/icons/super-mas.ico" type="image/x-icon">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
+
 <body>
-    <header id="navbar-container"></header>
+    <div id="navbar-placeholder"></div>
 
     <main class="container my-5">
         <h1 class="text-center mb-4">Listado de Productos</h1>
@@ -26,13 +27,13 @@
                     </tr>
                 </thead>
                 <tbody id="productos-table-body">
-                    </tbody>
+                </tbody>
             </table>
         </div>
         <p id="loading-productos" class="text-center">Cargando productos...</p>
     </main>
 
-    <footer id="footer-container"></footer>
+    <div id="footer-placeholder"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../js/component-loader.js"></script>
@@ -43,4 +44,5 @@
         });
     </script>
 </body>
+
 </html>
