--- a/Front/Super-Mas/html/index.html
+++ b/Front/Super-Mas/html/index.html
@@ -121,7 +121,7 @@
 
                 <div class="chart-box">
                     <div class="chart-header">
-                        <h3>Correlación: Stock vs. Precio (Arreglado)</h3>
+                        <h3>Correlación: Stock vs. Precio</h3>
                         <p class="chart-subtitle">Muestra la relación entre el stock disponible y el precio de los
                             productos.</p>
                     </div>
